--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="padre">
     <header class="header">
       <div class="row">
-        <video src="../img/ojos_gato.mp4" autoplay="true" muted="true" loop="true"></video>
+        <video src="./img/ojos_gato.mp4" autoplay="true" muted="true" loop="true"></video>
       </div>
       <div class="row">
         
