--- a/html/tienda.html
+++ b/html/tienda.html
@@ -29,10 +29,10 @@
           <nav>
             <ul>
 
-              <li><a href="/html/tienda.html">Tienda/Shop</a></li>
-              <li><a href="/html/comunidad.html">Nosotros</a></li>
-              <li><a href="/html/adopta.html">Adopciones</a></li>
-              <li><a href="/html/redes.html">Contacto</a></li>
+              <li><a href="tienda.html">Tienda/Shop</a></li>
+                <li><a href="comunidad.html">Nosotros</a></li>
+                <li><a href="adopta.html">Adopciones</a></li>
+                <li><a href="redes.html">Contacto</a></li>
             </ul>
           </nav>
         </div>
