--- a/html/comunidad.html
+++ b/html/comunidad.html
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="map">
-            <h5>Para donaciones comunicate al <a class="cel" href="./redes.html"> 341-54545455</a>.<br> Si querés conocer nuestro<br>refugio de gatos, encontranos de 10 am a 16 pm.</h5>
+            <h5  class="comunicate">Para donaciones comunicate al <a class="cel" href="redes.html"> 341-54545455</a>.<br> Si querés conocer nuestro<br>refugio de gatos, encontranos de 10hs a 16hs.</h5>
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.337497956958!2d-60.69734563709415!3d-32.966459771455895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ac92d6387335%3A0x99b182cc7010487a!2sGaray%205513%2C%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666124859012!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
